--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
-    <h1>{{ title }}</h1>
+    {{>header}}
     <p>{{ helpText }}</p>
+    {{>footer}}
   </body>
   <script src="/js/app.js" async defer></script>
 </html>
