--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -4,11 +4,11 @@
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/styles.css">
-  </head>
+  </head> 
   <body>
-    <h1>{{ title }}</h1>
-    <p>{{ name }}</p>
-    <img src="/img/profile.jpg" alt="">
+    {{>header}}
+    <p>{{ name }}<p/>
+    {{>footer}}
   </body>
   <script src="/js/app.js" async defer></script>
 </html>
