--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="./img/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
-    {{>header}}
-    <p>{{ name }}</p>
-    <img src="/img/profile.jpg" alt="">
+    <div class="main-content">
+      {{>header}}
+      <p>{{ name }}</p>
+      <img class="portrait" src="/img/profile.jpg" alt="">
+    </div>
     {{>footer}}
   </body>
   <script src="/js/app.js" async defer></script>
