--- a/web-server/templates/views/error404.hbs
+++ b/web-server/templates/views/error404.hbs
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Error 404</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="./img/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
-    {{>header}}
-    <p>{{errorMessage}}</p>
+    <div class="main-content">
+      {{>header}}
+      <p>{{errorMessage}}</p>
+    </div>
     {{>footer}}
   </body>
   <script src="/js/app.js" async defer></script>
