creating a search form

--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -10,6 +10,10 @@
     <div class="main-content">
       {{>header}}
       <p>Use this site to get your weather!<p/>
+      <form action="submit">
+        <input type="text" name="location" placeholder="Toronto">
+        <button>Search</button>
+      </form>
     </div>
     {{>footer}}
   </body>
