wiring up the user interface

--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -14,6 +14,9 @@
         <input type="text" name="location" placeholder="Toronto">
         <button>Search</button>
       </form>
+
+      <p id="message-1"></p>
+      <p id="message-2"></p>
     </div>
     {{>footer}}
   </body>
