--- a/web-server/public/css/styles.css
+++ b/web-server/public/css/styles.css
@@ -35,6 +35,19 @@ header a {
     width: 250px;
 }
 
+input {
+    border: 1px solid #ccc;
+    padding: 8px;
+}
+
+button {
+    cursor: pointer;
+    border: 1px solid #888;
+    background: #888;
+    color: #fff;
+    padding: 8px;
+}
+
 footer {
     color: #888;
     border-top: 1px solid #eee;
