application deployment: git, github, heroku + avoiding global modules

--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -9,7 +9,8 @@
   <body>
     <div class="main-content">
       {{>header}}
-      <p>{{ name }}</p>
+      <p>This app is made by {{ name }}.</p>
+      <p>It uses data from <a target="_blank" href="https://mapbox.com">mapbox</a> and <a target="_blank" href="https://darksky.net">Darksky</a></p>
       <img class="portrait" src="/img/profile.jpg" alt="">
     </div>
     {{>footer}}
